--- a/Figure2mod.ipynb
+++ b/Figure2mod.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "2M1BW0t8Lz5d"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -43,7 +43,7 @@
         "id": "HrOB_TJxMC9j",
         "outputId": "ca06168e-d51f-4119-d21f-bd82164f47a8"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "gCXII-AEgAjH"
       },
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "id": "lplcCkEkje8m"
       },
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -403,12 +403,12 @@
       "metadata": {
         "id": "blz14tHZe6mJ"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "id": "DKukFYJdbqbW",
         "colab": {
@@ -960,7 +960,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "id": "7QMFLyRLcF99",
         "colab": {
@@ -1380,7 +1380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "id": "bqXPfTpFZlGn",
         "colab": {
@@ -1900,7 +1900,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "id": "woGe7ZS8pl6a"
       },
@@ -1918,7 +1918,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "id": "KV0Ss9AWp-al"
       },
@@ -1942,7 +1942,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "id": "O-fk6MriImwl"
       },
@@ -1989,7 +1989,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "id": "io8XnbfaomCe",
         "colab": {
@@ -2073,7 +2073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "id": "MLC-7EkUo6Vm",
         "colab": {
@@ -2148,7 +2148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "A1B6O6HTjlM0"
       },
@@ -2296,7 +2296,7 @@
         "id": "rKCQsQFMIgVn",
         "outputId": "6793fbb7-5fcb-4427-d38f-e24f048436ef"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2333,7 +2333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "id": "KvQoEpyqo8Ga",
         "colab": {
@@ -2409,7 +2409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "id": "14rvNrWpouj3",
         "colab": {
@@ -2487,7 +2487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "id": "V_FbAFdsnjqz",
         "colab": {
@@ -2599,7 +2599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "id": "-1p3iHnqjm3C",
         "colab": {
@@ -2762,7 +2762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "id": "OZiaxyy-joWW",
         "colab": {
@@ -2804,7 +2804,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "U9AAvf6fRV0q",
         "colab": {
@@ -2855,7 +2855,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "7Iwf0lehjq6_",
         "colab": {
@@ -2913,7 +2913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "id": "c6w9OoFOjp4L",
         "colab": {
@@ -2964,7 +2964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "id": "eY9chGwXLmvL",
         "colab": {
@@ -3020,7 +3020,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "id": "qSquBqE3I32F",
         "colab": {
@@ -3083,7 +3083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {
         "id": "5Bz5CwvWJBRd",
         "colab": {
@@ -3134,7 +3134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "id": "2V_vAecBU8TX",
         "colab": {
@@ -3213,7 +3213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "id": "1smZQNICJKPL",
         "colab": {
@@ -3276,7 +3276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "metadata": {
         "id": "blQhd6RJJOxU",
         "colab": {
@@ -3315,7 +3315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "id": "3WVg9QelJVSw",
         "colab": {
@@ -3442,7 +3442,7 @@
         "id": "cGbOlVkPZFsN",
         "outputId": "35a9c1e5-c5d9-44cd-d721-7206eb6cdbaf"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3497,7 +3497,84 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "source": [
+        "# ╔═╡ Cell 10.9 – Bootstrap‐Calibrated XGBoost on future hold‐out ═════════╗\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.utils           import resample, clone\n",
+        "from sklearn.metrics         import (\n",
+        "    roc_auc_score, roc_curve,\n",
+        "    confusion_matrix, classification_report,\n",
+        "    RocCurveDisplay, brier_score_loss\n",
+        ")\n",
+        "from sklearn.calibration     import CalibratedClassifierCV, calibration_curve\n",
+        "\n",
+        "# 1) Number of bootstrap replicates\n",
+        "n_boot = 20\n",
+        "\n",
+        "# 2) Prepare array to hold each replicate’s hold‐out probabilities\n",
+        "boot_preds = np.zeros((len(X_test), n_boot))\n",
+        "\n",
+        "for i in range(n_boot):\n",
+        "    # a) draw a bootstrap sample from the build set\n",
+        "    Xb, yb = resample(X_train, y_train, random_state=RANDOM_STATE + i)\n",
+        "    # b) clone your final XGBoost pipeline (prep → XGBClassifier)\n",
+        "    xgb_pipe = clone(models[\"XGBoost\"])\n",
+        "    # c) wrap it in a sigmoid calibrator (3‐fold CV)\n",
+        "    calib = CalibratedClassifierCV(\n",
+        "        estimator=xgb_pipe,\n",
+        "        method=\"sigmoid\",\n",
+        "        cv=3\n",
+        "    )\n",
+        "    # d) fit on the bootstrap draw\n",
+        "    calib.fit(Xb, yb)\n",
+        "    # e) predict probabilities on the true 20% hold‐out\n",
+        "    boot_preds[:, i] = calib.predict_proba(X_test)[:, 1]\n",
+        "\n",
+        "# 3) Average the bootstrap probabilities\n",
+        "y_mean = boot_preds.mean(axis=1)\n",
+        "y_pred = (y_mean >= 0.5).astype(int)\n",
+        "\n",
+        "# 4) Discrimination & classification metrics\n",
+        "print(\"Bootstrap‐Calibrated XGBoost AUC:   \", roc_auc_score(y_test, y_mean))\n",
+        "print(\"Confusion matrix @0.5:\\n\", confusion_matrix(y_test, y_pred))\n",
+        "print(\"\\nClassification report:\\n\", classification_report(y_test, y_pred))\n",
+        "\n",
+        "# 5) ROC curve\n",
+        "RocCurveDisplay.from_predictions(y_test, y_mean)\n",
+        "plt.title(\"Bootstrap‐Calibrated XGBoost – ROC on hold‐out\")\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# 6) Calibration curve + Brier score\n",
+        "frac_pos, mean_pred = calibration_curve(y_test, y_mean, n_bins=10)\n",
+        "plt.figure(figsize=(6, 4))\n",
+        "plt.plot(mean_pred, frac_pos, \"o-\", label=\"Boot‐Calibrated XGB\")\n",
+        "plt.plot([0, 1], [0, 1], \"k--\", label=\"Perfectly calibrated\")\n",
+        "plt.xlabel(\"Mean predicted probability\")\n",
+        "plt.ylabel(\"Fraction of positives\")\n",
+        "plt.title(\"Calibration curve – hold‐out\")\n",
+        "plt.legend()\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "print(\"Bootstrap‐Calibrated XGB Brier score:\", brier_score_loss(y_test, y_mean))\n",
+        "\n",
+        "# 7) Optimal threshold via Youden’s J\n",
+        "fpr, tpr, thresh = roc_curve(y_test, y_mean)\n",
+        "j_scores         = tpr - fpr\n",
+        "best_thresh      = thresh[np.argmax(j_scores)]\n",
+        "print(f\"Optimal threshold (max Youden’s J): {best_thresh:.3f}\")\n"
+      ],
+      "metadata": {
+        "id": "-R8_cIIKjTba"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "U-7GFSRefJ0e",
         "colab": {
@@ -3618,16 +3695,7 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "4tHINHzsKLUB"
-      },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 101,
       "metadata": {
         "id": "T_pdzzce-T8p",
         "colab": {
@@ -3692,7 +3760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "metadata": {
         "id": "hkYcNh6e-VfF",
         "colab": {
@@ -3767,7 +3835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": null,
       "metadata": {
         "id": "kvyUWuG0-WO5",
         "colab": {
@@ -3926,7 +3994,7 @@
         },
         "outputId": "72adc524-97a6-4eee-d74b-3d629c638e72"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4020,7 +4088,7 @@
         "id": "AC_u_B5PKbH7",
         "outputId": "ae61eb44-c7b6-4ed0-a21f-230042bf47d7"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4080,7 +4148,7 @@
         "id": "LIeKpgfwKiVB",
         "outputId": "68712dd0-b8ab-46bd-f5d3-49e37c5bc347"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4206,7 +4274,7 @@
         "id": "AF2HxnIaLkvl",
         "outputId": "a229f97b-1784-4cbe-81e0-6e36d133ea65"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4306,7 +4374,7 @@
       "gpuType": "A100",
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQuKu8IuTQopPBcZM9tXwS",
+      "authorship_tag": "ABX9TyNhLZiYttNFdbRjb0a5I+TA",
       "include_colab_link": true
     },
     "kernelspec": {
